# clawde

./: .gitattributes  .gitignore  README.md
.github/: GOVERNANCE.md  MAINTAINERS.md  ROADMAP.md  SECURITY.md  dependabot.yml
.github/wiki/: Changelog.md  ClawDE-Plus.md  Community.md  Contributing.md  Contributors.md  Deep-Links.md  FAQ.md  Folder-Structure.md  Getting-Started.md  Home.md  Packages.md  Roadmap.md  Security.md  Troubleshooting.md  Upgrading.md  _Footer.md
.github/wiki/Features/: Daemon.md  Model-Intelligence.md  Repo-Intelligence.md
.github/wiki/Integrations/: JetBrains.md  Neovim.md
.github/workflows/: ci.yml  clawd-review.yml  clean-root.yml  debian-package.yml  desktop-windows.yml  gitleaks.yml  macos-notarize.yml  mobile-ci.yml  mutation-testing.yml  nself-first-check.yml  price-lint.yml  quarterly-doc-audit.yml  release.yml
apps/: CHANGELOG.md  VERSIONING.md
apps/daemon/: Cargo.toml  deny.toml
apps/daemon/src/: main.rs
apps/daemon/src/license/: gate.rs
apps/daemon/src/reconnect/: batch_delivery.rs  mod.rs
apps/daemon/src/sync/: mod.rs
apps/desktop/: README.md  pubspec.yaml
apps/desktop/lib/features/chat/widgets/: message_list.dart
apps/desktop/lib/features/deep_link/: deep_link_service.dart
apps/desktop/lib/features/file_tree/: file_tree_widget.dart
apps/desktop/lib/features/files/: file_batch_replay_handler.dart
apps/desktop/lib/features/license/: license_gate_widget.dart
apps/desktop/lib/features/sessions/: session_replay.dart
apps/desktop/lib/features/settings/: clawde_plus_settings.dart  settings_screen.dart  team_members_page.dart
apps/desktop/lib/features/sync/: sync_provider.dart
apps/desktop/lib/services/: hotkey_service.dart
apps/desktop/lib/widgets/: ai_disclosure_banner.dart
apps/desktop/macos/Flutter/: GeneratedPluginRegistrant.swift
apps/desktop/test/: deep_link_test.dart
apps/desktop/test/accessibility/: semantics_test.dart
apps/mobile/: README.md  SIGNING.md  pubspec.yaml
apps/mobile/android/: assetlinks-template.json
apps/mobile/ios/: apple-app-site-association-template.json
apps/mobile/lib/features/sync/: remote_sessions_provider.dart  remote_sessions_screen.dart
apps/mobile/lib/l10n/: app_ar.arb  app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_ja.arb  app_zh.arb
apps/mobile/lib/widgets/: help_widget.dart
apps/mobile/test/widgets/: help_widget_test.dart
