[package]
name = "clawd"
version = "0.1.0"
edition = "2021"
description = "ClawDE Host — always-on background daemon"
license = "MIT"
repository = "https://github.com/clawde-io/apps"
homepage = "https://clawde.io"
authors = ["ClawDE Contributors"]

[[bin]]
name = "clawd"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket server (JSON-RPC 2.0 transport)
# rustls-tls: pure-Rust TLS — no OpenSSL, cross-compilation safe
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# G8-T03 P97 W37 — explicit rustls floor to clear RUSTSEC-2023-0064 (TLS handshake DoS).
# Pulled in transitively by tokio-tungstenite + reqwest; pinning a floor here ensures
# no future dep tree resolution drops below the patched range. Resolves to 0.23.x at lock.
rustls = ">= 0.21.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (SQLite, WAL mode — crash-safe session persistence)
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-none", "migrate"] }

# Git integration — no subprocess spawning, local operations only (no fetch/push/SSH)
# vendored-libgit2: statically build libgit2, cross-compilation safe, no OpenSSL needed
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

# File watching (cross-platform, debounced)
notify = "7"
notify-debouncer-full = "0.3"

# Error handling
anyhow = "1"
# Cross-platform system information (RAM, CPU) for resource governance
sysinfo = { version = "0.32", features = ["system"] }
thiserror = "2"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
log = "0.4"

# OT.T01 — OpenTelemetry OTLP export (feature-gated: --features tracing)
# Only active when OTEL_EXPORTER_OTLP_ENDPOINT is set at runtime.
# Without the feature, spans are stored in SQLite only (zero external overhead).
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"], optional = true }

# TOML config file support
toml = { version = "0.8", features = ["parse"] }

# mDNS service advertisement (_clawde._tcp.local for LAN discovery)
mdns-sd = "0.11"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# UUIDs for session/message IDs
uuid = { version = "1", features = ["v4"] }
ulid = "1.1"

# SHA-256 for daemon_id fingerprint and E2E HKDF
sha2 = "0.10"

# HMAC for license cache integrity verification
hmac = "0.12"

# E2E encryption for relay (X25519 + HKDF-SHA256 + ChaCha20-Poly1305)
x25519-dalek = "2"
# Pack signing (ed25519 keypair — Sprint M PK.T05)
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
base64 = "0.22"

# HTTP client for license verification, telemetry, and auto-update
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Pack archive extraction (gzip + tar for registry downloads)
flate2 = "1"
tar = "0.4"

# Semver for auto-update version comparison
semver = "1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# YAML serialization (task specs in .claw/tasks/<id>/task.yaml)
serde_yaml = "0.9"

# Regex for secret redaction and eval scanners
regex = "1"

# Lazy static initialization for compiled regexes
once_cell = "1"

# Async trait (for Runner trait)
async-trait = "0.1"
# QR code generation for device pairing (clawd token qr)
qrcode = "0.14"
# Local IP address detection for QR payload (clawd token qr)
local-ip-address = "0.5"
tempfile = "3"

# Unix-only: process signals for pause (SIGSTOP) / resume (SIGCONT)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Sprint FF PL.13 — Plugin runtime dependencies
# libloading: dlopen native dylib plugins (.so/.dylib/.dll)
libloading = "0.8"
# wasmtime: WASM plugin sandbox (cranelift JIT backend, no OpenSSL)
wasmtime = { version = "44", default-features = false, features = ["cranelift", "runtime", "component-model"] }
# clawd_plugin_abi: stable C ABI types shared with plugins
clawd_plugin_abi = { path = "../packages/clawd_plugin_abi" }

# HTTP REST server (Sprint QQ RA.1 — Axum on port 4301)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"

# Sprint II CH.1-CH.2 — Terminal chat + explain UI
ratatui = "0.28"
indicatif = "0.17"
crossterm = "0.28"

[features]
# OT.T01 — Enable OpenTelemetry OTLP export
tracing = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]

# Library crate for integration tests
[lib]
name = "clawd"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "daemon_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
